DT-1377 Add filter for documents