@@ -1,15 +1,17 @@
 package uk.gov.justice.digital.delius.service;
 
-import com.google.common.collect.ImmutableList;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
+import org.mockito.Captor;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
+import org.springframework.data.jpa.domain.Specification;
 import uk.gov.justice.digital.delius.data.api.OffenderDocuments;
 import uk.gov.justice.digital.delius.data.filters.DocumentFilter;
 import uk.gov.justice.digital.delius.jpa.national.repository.DocumentRepository;
@@ -97,44 +99,48 @@ public class DocumentServiceTest {
     private UPWAppointmentDocumentRepository upwAppointmentDocumentRepository;
     @Mock
     private ContactDocumentRepository contactDocumentRepository;
+    @Captor
+    private ArgumentCaptor<Specification<CourtReportDocument>> courtReportDocumentSpecification;
 
 
     @BeforeEach
     public void before() {
+
         documentService = new DocumentService(
-                documentRepository,
-                offenderRepository,
-                offenderDocumentRepository,
-                eventDocumentRepository,
-                courtReportDocumentRepository,
-                institutionReportDocumentRepository,
-                eventRepository,
-                addressAssessmentRepository,
-                approvedPremisesReferralDocumentRepository,
-                assessmentDocumentRepository,
-                caseAllocationDocumentRepository,
-                personalContactDocumentRepository,
-                referralDocumentRepository,
-                nsiDocumentRepository,
-                personalCircumstanceDocumentRepository,
-                upwAppointmentDocumentRepository,
-                contactDocumentRepository
+            documentRepository,
+            offenderRepository,
+            offenderDocumentRepository,
+            eventDocumentRepository,
+            courtReportDocumentRepository,
+            institutionReportDocumentRepository,
+            eventRepository,
+            addressAssessmentRepository,
+            approvedPremisesReferralDocumentRepository,
+            assessmentDocumentRepository,
+            caseAllocationDocumentRepository,
+            personalContactDocumentRepository,
+            referralDocumentRepository,
+            nsiDocumentRepository,
+            personalCircumstanceDocumentRepository,
+            upwAppointmentDocumentRepository,
+            contactDocumentRepository
         );
         when(offenderRepository.findByOffenderId(any())).thenReturn(Optional.of(anOffender()));
-        when(offenderDocumentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of());
-        when(eventDocumentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of());
-        when(courtReportDocumentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of());
-        when(institutionReportDocumentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of());
-        when(eventRepository.findByOffenderId(any())).thenReturn(ImmutableList.of());
-        when(addressAssessmentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of());
-        when(approvedPremisesReferralDocumentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of());
-        when(assessmentDocumentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of());
-        when(personalContactDocumentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of());
-        when(referralDocumentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of());
-        when(nsiDocumentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of());
-        when(personalCircumstanceDocumentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of());
-        when(upwAppointmentDocumentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of());
-        when(contactDocumentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of());
+        when(offenderDocumentRepository.findByOffenderId(any())).thenReturn(List.of());
+        when(eventDocumentRepository.findByOffenderId(any())).thenReturn(List.of());
+        when(courtReportDocumentRepository.findAll(courtReportDocumentSpecification.capture())).thenReturn(List
+            .of());
+        when(institutionReportDocumentRepository.findByOffenderId(any())).thenReturn(List.of());
+        when(eventRepository.findByOffenderId(any())).thenReturn(List.of());
+        when(addressAssessmentRepository.findByOffenderId(any())).thenReturn(List.of());
+        when(approvedPremisesReferralDocumentRepository.findByOffenderId(any())).thenReturn(List.of());
+        when(assessmentDocumentRepository.findByOffenderId(any())).thenReturn(List.of());
+        when(personalContactDocumentRepository.findByOffenderId(any())).thenReturn(List.of());
+        when(referralDocumentRepository.findByOffenderId(any())).thenReturn(List.of());
+        when(nsiDocumentRepository.findByOffenderId(any())).thenReturn(List.of());
+        when(personalCircumstanceDocumentRepository.findByOffenderId(any())).thenReturn(List.of());
+        when(upwAppointmentDocumentRepository.findByOffenderId(any())).thenReturn(List.of());
+        when(contactDocumentRepository.findByOffenderId(any())).thenReturn(List.of());
     }
 
     @Test
@@ -146,7 +152,7 @@ public class DocumentServiceTest {
 
     @Test
     public void singleConvictionAddedWhenSingleCourtReport() {
-        when(courtReportDocumentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of(aCourtReportDocument()));
+        when(courtReportDocumentRepository.findAll(courtReportDocumentSpecification.capture())).thenReturn(List.of(aCourtReportDocument()));
 
         final OffenderDocuments documents = documentService.offenderDocumentsFor(1L, DocumentFilter.noFilter());
 
@@ -160,8 +166,8 @@ public class DocumentServiceTest {
         final Event event = anEvent();
         event.setEventId(99L);
 
-        when(eventRepository.findByOffenderId(any())).thenReturn(ImmutableList.of(event));
-        when(courtReportDocumentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of(courtReportDocument));
+        when(eventRepository.findByOffenderId(any())).thenReturn(List.of(event));
+        when(courtReportDocumentRepository.findAll(courtReportDocumentSpecification.capture())).thenReturn(List.of(courtReportDocument));
 
         final OffenderDocuments documents = documentService.offenderDocumentsFor(1L, DocumentFilter.noFilter());
 
@@ -175,8 +181,9 @@ public class DocumentServiceTest {
         final Event event = anEvent();
         event.setEventId(99L);
 
-        when(eventRepository.findByOffenderId(any())).thenReturn(ImmutableList.of(event));
-        when(courtReportDocumentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of(courtReportDocument));
+        when(eventRepository.findByOffenderId(any())).thenReturn(List.of(event));
+        when(courtReportDocumentRepository.findAll(courtReportDocumentSpecification.capture())).thenReturn(List
+            .of(courtReportDocument));
 
         final OffenderDocuments documents = documentService.offenderDocumentsFor(1L, DocumentFilter.noFilter());
 
@@ -185,7 +192,7 @@ public class DocumentServiceTest {
 
     @Test
     public void singleConvictionAddedWhenSingleInstitutionalReport() {
-        when(institutionReportDocumentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of(anInstitutionalReportDocument()));
+        when(institutionReportDocumentRepository.findByOffenderId(any())).thenReturn(List.of(anInstitutionalReportDocument()));
 
         final OffenderDocuments documents = documentService.offenderDocumentsFor(1L, DocumentFilter.noFilter());
 
@@ -199,8 +206,8 @@ public class DocumentServiceTest {
         final Event event = anEvent();
         event.setEventId(99L);
 
-        when(eventRepository.findByOffenderId(any())).thenReturn(ImmutableList.of(event));
-        when(institutionReportDocumentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of(institutionalReportDocument));
+        when(eventRepository.findByOffenderId(any())).thenReturn(List.of(event));
+        when(institutionReportDocumentRepository.findByOffenderId(any())).thenReturn(List.of(institutionalReportDocument));
 
         final OffenderDocuments documents = documentService.offenderDocumentsFor(1L, DocumentFilter.noFilter());
 
@@ -214,8 +221,8 @@ public class DocumentServiceTest {
         final Event event = anEvent();
         event.setEventId(99L);
 
-        when(eventRepository.findByOffenderId(any())).thenReturn(ImmutableList.of(event));
-        when(institutionReportDocumentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of(institutionalReportDocument));
+        when(eventRepository.findByOffenderId(any())).thenReturn(List.of(event));
+        when(institutionReportDocumentRepository.findByOffenderId(any())).thenReturn(List.of(institutionalReportDocument));
 
         final OffenderDocuments documents = documentService.offenderDocumentsFor(1L, DocumentFilter.noFilter());
 
@@ -227,7 +234,7 @@ public class DocumentServiceTest {
         final Event event = anEvent();
         event.setCpsAlfrescoDocumentId(null);
 
-        when(eventRepository.findByOffenderId(any())).thenReturn(ImmutableList.of(event));
+        when(eventRepository.findByOffenderId(any())).thenReturn(List.of(event));
 
         final OffenderDocuments documents = documentService.offenderDocumentsFor(1L, DocumentFilter.noFilter());
 
@@ -239,7 +246,7 @@ public class DocumentServiceTest {
         final Event event = anEvent();
         event.setCpsAlfrescoDocumentId("123");
 
-        when(eventRepository.findByOffenderId(any())).thenReturn(ImmutableList.of(event));
+        when(eventRepository.findByOffenderId(any())).thenReturn(List.of(event));
 
         final OffenderDocuments documents = documentService.offenderDocumentsFor(1L, DocumentFilter.noFilter());
 
@@ -272,11 +279,11 @@ public class DocumentServiceTest {
 
     @Test
     public void eventDocumentsDistributedToEachConviction() {
-        when(eventDocumentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of(
-                anEventDocument(1L),
-                anEventDocument(2L),
-                anEventDocument(2L),
-                anEventDocument(2L)
+        when(eventDocumentRepository.findByOffenderId(any())).thenReturn(List.of(
+            anEventDocument(1L),
+            anEventDocument(2L),
+            anEventDocument(2L),
+            anEventDocument(2L)
         ));
 
         final OffenderDocuments documents = documentService.offenderDocumentsFor(1L, DocumentFilter.noFilter());
@@ -288,12 +295,13 @@ public class DocumentServiceTest {
 
     @Test
     public void courtReportsDocumentsDistributedToEachConviction() {
-        when(courtReportDocumentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of(
+        when(courtReportDocumentRepository.findAll(courtReportDocumentSpecification.capture())).thenReturn(List
+            .of(
                 aCourtReportDocument(1L),
                 aCourtReportDocument(2L),
                 aCourtReportDocument(2L),
                 aCourtReportDocument(2L)
-        ));
+            ));
 
         final OffenderDocuments documents = documentService.offenderDocumentsFor(1L, DocumentFilter.noFilter());
 
@@ -304,11 +312,11 @@ public class DocumentServiceTest {
 
     @Test
     public void institutionReportDocumentsDistributedToEachConviction() {
-        when(institutionReportDocumentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of(
-                anInstitutionalReportDocument(1L),
-                anInstitutionalReportDocument(2L),
-                anInstitutionalReportDocument(2L),
-                anInstitutionalReportDocument(2L)
+        when(institutionReportDocumentRepository.findByOffenderId(any())).thenReturn(List.of(
+            anInstitutionalReportDocument(1L),
+            anInstitutionalReportDocument(2L),
+            anInstitutionalReportDocument(2L),
+            anInstitutionalReportDocument(2L)
         ));
 
         final OffenderDocuments documents = documentService.offenderDocumentsFor(1L, DocumentFilter.noFilter());
@@ -320,9 +328,9 @@ public class DocumentServiceTest {
 
     @Test
     public void addressAssessmentDocumentsAddedToOffenderDocuments() {
-        when(addressAssessmentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of(
-                anAddressAssessmentDocument(),
-                anAddressAssessmentDocument()
+        when(addressAssessmentRepository.findByOffenderId(any())).thenReturn(List.of(
+            anAddressAssessmentDocument(),
+            anAddressAssessmentDocument()
         ));
 
         final OffenderDocuments documents = documentService.offenderDocumentsFor(1L, DocumentFilter.noFilter());
@@ -332,11 +340,11 @@ public class DocumentServiceTest {
 
     @Test
     public void approvedPremisesReferralDocumentsDistributedToEachConviction() {
-        when(approvedPremisesReferralDocumentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of(
-                anApprovedPremisesReferralDocument(1L),
-                anApprovedPremisesReferralDocument(2L),
-                anApprovedPremisesReferralDocument(2L),
-                anApprovedPremisesReferralDocument(2L)
+        when(approvedPremisesReferralDocumentRepository.findByOffenderId(any())).thenReturn(List.of(
+            anApprovedPremisesReferralDocument(1L),
+            anApprovedPremisesReferralDocument(2L),
+            anApprovedPremisesReferralDocument(2L),
+            anApprovedPremisesReferralDocument(2L)
         ));
 
         final OffenderDocuments documents = documentService.offenderDocumentsFor(1L, DocumentFilter.noFilter());
@@ -348,11 +356,11 @@ public class DocumentServiceTest {
 
     @Test
     public void assessmentDocumentsDistributedToEachConviction() {
-        when(assessmentDocumentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of(
-                anAssessmentDocument(1L),
-                anAssessmentDocument(2L),
-                anAssessmentDocument(2L),
-                anAssessmentDocument(2L)
+        when(assessmentDocumentRepository.findByOffenderId(any())).thenReturn(List.of(
+            anAssessmentDocument(1L),
+            anAssessmentDocument(2L),
+            anAssessmentDocument(2L),
+            anAssessmentDocument(2L)
         ));
 
         final OffenderDocuments documents = documentService.offenderDocumentsFor(1L, DocumentFilter.noFilter());
@@ -364,11 +372,11 @@ public class DocumentServiceTest {
 
     @Test
     public void caseAllocationDocumentsDistributedToEachConviction() {
-        when(caseAllocationDocumentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of(
-                aCaseAllocationDocument(1L),
-                aCaseAllocationDocument(2L),
-                aCaseAllocationDocument(2L),
-                aCaseAllocationDocument(2L)
+        when(caseAllocationDocumentRepository.findByOffenderId(any())).thenReturn(List.of(
+            aCaseAllocationDocument(1L),
+            aCaseAllocationDocument(2L),
+            aCaseAllocationDocument(2L),
+            aCaseAllocationDocument(2L)
         ));
 
         final OffenderDocuments documents = documentService.offenderDocumentsFor(1L, DocumentFilter.noFilter());
@@ -380,9 +388,9 @@ public class DocumentServiceTest {
 
     @Test
     public void personalContactDocumentsAddedToOffenderDocuments() {
-        when(personalContactDocumentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of(
-                aPersonalContactDocument(),
-                aPersonalContactDocument()
+        when(personalContactDocumentRepository.findByOffenderId(any())).thenReturn(List.of(
+            aPersonalContactDocument(),
+            aPersonalContactDocument()
         ));
 
         final OffenderDocuments documents = documentService.offenderDocumentsFor(1L, DocumentFilter.noFilter());
@@ -392,11 +400,11 @@ public class DocumentServiceTest {
 
     @Test
     public void referralDocumentsDistributedToEachConviction() {
-        when(referralDocumentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of(
-                aReferralDocument(1L),
-                aReferralDocument(2L),
-                aReferralDocument(2L),
-                aReferralDocument(2L)
+        when(referralDocumentRepository.findByOffenderId(any())).thenReturn(List.of(
+            aReferralDocument(1L),
+            aReferralDocument(2L),
+            aReferralDocument(2L),
+            aReferralDocument(2L)
         ));
 
         final OffenderDocuments documents = documentService.offenderDocumentsFor(1L, DocumentFilter.noFilter());
@@ -408,13 +416,13 @@ public class DocumentServiceTest {
 
     @Test
     public void nsiDocumentsDistributedToEachConvictionAndOffender() {
-        when(nsiDocumentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of(
-                aNsiDocument(1L),
-                aNsiDocument(2L),
-                aNsiDocument(2L),
-                aNsiDocument(2L),
-                aNsiDocument(),
-                aNsiDocument()
+        when(nsiDocumentRepository.findByOffenderId(any())).thenReturn(List.of(
+            aNsiDocument(1L),
+            aNsiDocument(2L),
+            aNsiDocument(2L),
+            aNsiDocument(2L),
+            aNsiDocument(),
+            aNsiDocument()
         ));
 
         final OffenderDocuments documents = documentService.offenderDocumentsFor(1L, DocumentFilter.noFilter());
@@ -427,9 +435,9 @@ public class DocumentServiceTest {
 
     @Test
     public void personalCircumstanceDocumentsAddedToOffenderDocuments() {
-        when(personalCircumstanceDocumentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of(
-                aPersonalCircumstanceDocument(),
-                aPersonalCircumstanceDocument()
+        when(personalCircumstanceDocumentRepository.findByOffenderId(any())).thenReturn(List.of(
+            aPersonalCircumstanceDocument(),
+            aPersonalCircumstanceDocument()
         ));
 
         final OffenderDocuments documents = documentService.offenderDocumentsFor(1L, DocumentFilter.noFilter());
@@ -439,11 +447,11 @@ public class DocumentServiceTest {
 
     @Test
     public void upwAppointmentDocumentsDistributedToEachConviction() {
-        when(upwAppointmentDocumentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of(
-                aUPWAppointmentDocument(1L),
-                aUPWAppointmentDocument(2L),
-                aUPWAppointmentDocument(2L),
-                aUPWAppointmentDocument(2L)
+        when(upwAppointmentDocumentRepository.findByOffenderId(any())).thenReturn(List.of(
+            aUPWAppointmentDocument(1L),
+            aUPWAppointmentDocument(2L),
+            aUPWAppointmentDocument(2L),
+            aUPWAppointmentDocument(2L)
         ));
 
         final OffenderDocuments documents = documentService.offenderDocumentsFor(1L, DocumentFilter.noFilter());
@@ -455,13 +463,13 @@ public class DocumentServiceTest {
 
     @Test
     public void contactDocumentsDistributedToEachConvictionAndOffender() {
-        when(contactDocumentRepository.findByOffenderId(any())).thenReturn(ImmutableList.of(
-                aContactDocument(1L),
-                aContactDocument(2L),
-                aContactDocument(2L),
-                aContactDocument(2L),
-                aContactDocument(),
-                aContactDocument()
+        when(contactDocumentRepository.findByOffenderId(any())).thenReturn(List.of(
+            aContactDocument(1L),
+            aContactDocument(2L),
+            aContactDocument(2L),
+            aContactDocument(2L),
+            aContactDocument(),
+            aContactDocument()
         ));
 
         final OffenderDocuments documents = documentService.offenderDocumentsFor(1L, DocumentFilter.noFilter());
@@ -479,7 +487,7 @@ public class DocumentServiceTest {
         @BeforeEach
         void setUp() {
             when(eventDocumentRepository.findByOffenderId(any())).thenReturn(List.of(anEventDocument(1L)));
-            when(courtReportDocumentRepository.findByOffenderId(any())).thenReturn(List.of(aCourtReportDocument(1L)));
+            when(courtReportDocumentRepository.findAll(courtReportDocumentSpecification.capture())).thenReturn(List.of(aCourtReportDocument(1L)));
             when(institutionReportDocumentRepository.findByOffenderId(any())).thenReturn(List.of(anInstitutionalReportDocument(1L)));
             when(approvedPremisesReferralDocumentRepository.findByOffenderId(any())).thenReturn(List.of(anApprovedPremisesReferralDocument(1L)));
             when(assessmentDocumentRepository.findByOffenderId(any())).thenReturn(List.of(anAssessmentDocument(1L)));
@@ -492,8 +500,15 @@ public class DocumentServiceTest {
             when(addressAssessmentRepository.findByOffenderId(any())).thenReturn(List.of(anAddressAssessmentDocument()));
             when(personalContactDocumentRepository.findByOffenderId(any())).thenReturn(List.of(aPersonalContactDocument()));
             when(personalCircumstanceDocumentRepository.findByOffenderId(any())).thenReturn(List.of(aPersonalCircumstanceDocument()));
-            when(offenderRepository.findByOffenderId(any())).thenReturn(Optional.of(anOffender().toBuilder().previousConvictionsAlfrescoDocumentId("123").build()));
-            when(eventRepository.findByOffenderId(any())).thenReturn(ImmutableList.of(anEvent().toBuilder().eventId(1L).cpsAlfrescoDocumentId("123").build()));
+            when(offenderRepository.findByOffenderId(any())).thenReturn(Optional.of(anOffender()
+                .toBuilder()
+                .previousConvictionsAlfrescoDocumentId("123")
+                .build()));
+            when(eventRepository.findByOffenderId(any())).thenReturn(List.of(anEvent()
+                .toBuilder()
+                .eventId(1L)
+                .cpsAlfrescoDocumentId("123")
+                .build()));
         }
 
         @DisplayName("No filter supplied")
@@ -505,7 +520,7 @@ public class DocumentServiceTest {
                 documentService.offenderDocumentsFor(1L, DocumentFilter.noFilter());
 
                 verify(eventDocumentRepository).findByOffenderId(1L);
-                verify(courtReportDocumentRepository).findByOffenderId(1L);
+                verify(courtReportDocumentRepository).findAll(courtReportDocumentSpecification.capture());
                 verify(institutionReportDocumentRepository).findByOffenderId(1L);
                 verify(approvedPremisesReferralDocumentRepository).findByOffenderId(1L);
                 verify(assessmentDocumentRepository).findByOffenderId(1L);
@@ -519,6 +534,7 @@ public class DocumentServiceTest {
                 verify(personalContactDocumentRepository).findByOffenderId(1L);
                 verify(personalCircumstanceDocumentRepository).findByOffenderId(1L);
             }
+
             @Test
             @DisplayName("Will return all documents types")
             void willReturnAllDocumentsTypes() {
@@ -534,10 +550,10 @@ public class DocumentServiceTest {
         class FilterWithJustCategory {
             @Test
             @DisplayName("Will only query the repository related to the category")
-            void willOnlyQueryTheRepositoryRelatedToTheCategory() {
-                documentService.offenderDocumentsFor(1L, DocumentFilter.of("COURT_REPORT_DOCUMENT", null));
+            void willOnlyQueryTheRepositoryRelatedToTheCourtReportCategory() {
+                documentService.offenderDocumentsFor(1L, DocumentFilter.of("COURT_REPORT_DOCUMENT", null).get());
 
-                verify(courtReportDocumentRepository).findByOffenderId(1L);
+                verify(courtReportDocumentRepository).findAll(courtReportDocumentSpecification.capture());
                 verifyNoInteractions(eventDocumentRepository,
                     institutionReportDocumentRepository,
                     approvedPremisesReferralDocumentRepository,
@@ -555,9 +571,33 @@ public class DocumentServiceTest {
             }
 
             @Test
+            @DisplayName("Will only query the repository related to other categories")
+            void willOnlyQueryTheRepositoryRelatedToOtherDocumentCategory() {
+                documentService.offenderDocumentsFor(1L, DocumentFilter.of("ASSESSMENT_DOCUMENT", null).get());
+
+                verify(assessmentDocumentRepository).findByOffenderId(any());
+                verifyNoInteractions(eventDocumentRepository,
+                    institutionReportDocumentRepository,
+                    approvedPremisesReferralDocumentRepository,
+                    courtReportDocumentRepository,
+                    caseAllocationDocumentRepository,
+                    referralDocumentRepository,
+                    nsiDocumentRepository,
+                    upwAppointmentDocumentRepository,
+                    contactDocumentRepository,
+                    offenderDocumentRepository,
+                    addressAssessmentRepository,
+                    personalContactDocumentRepository,
+                    personalCircumstanceDocumentRepository
+                );
+            }
+
+            @Test
             @DisplayName("Will only return documents for the category")
             void willOnlyReturnDocumentsForTheCategory() {
-                final var documents = documentService.offenderDocumentsFor(1L, DocumentFilter.of("COURT_REPORT_DOCUMENT", null));
+                final var documents = documentService.offenderDocumentsFor(1L, DocumentFilter
+                    .of("COURT_REPORT_DOCUMENT", null)
+                    .get());
                 assertThat(documents.getConvictions()).hasSize(1);
                 assertThat(documents.getConvictions().get(0).getDocuments()).hasSize(1);
                 assertThat(documents.getDocuments()).hasSize(0);
